force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <description>Availability keeps track of staff availability and allow users to assign staff to divisions</description>
    <label>Availability</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>