force-app/main/default/objects/Assignment__c/fields/Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Care_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>