force-app/main/default/objects/Assignment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Available__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Maternity_Leave</fullName>
                <label>Maternity/Paternity Leave</label>
            </value>
            <value>
                <fullName>Immunocompromised</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>