force-app/main/default/objects/Assignment__c/fields/User_Updated__c.field-meta.xml
<CustomField>
    <fullName>User_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Updated</label>
    <type>Checkbox</type>
</CustomField>