force-app/main/default/objects/Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Staff__c</columns>
    <columns>Date__c</columns>
    <columns>Available__c</columns>
    <columns>Reason__c</columns>
    <columns>Care_Facility__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>